Revert "fix(Popup): wrap position bottom, then focus will cause scroll buttom. close #1041"
This reverts commit 9b6be0e80dd1c21ab29fad75da4047229e98a9ac.

--- a/components/popup/style/base.less
+++ b/components/popup/style/base.less
@@ -1,15 +1,5 @@
 .@{PopupPrefixCls} {
-  &-wrap {
-    position: fixed;
-    overflow: auto;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 1050;
-    -webkit-overflow-scrolling: touch;
-    outline: 0;
-  }
+
   &-mask {
     position: fixed;
     top: 0;
